[[bin]]
name = "ief"

[package]
name = "ief"
version = "0.0.2"
authors = ["etke"]
edition = "2018"
license = "Apache-2.0"
description = "Cross-platform binary import/export search"
homepage = "https://github.com/etke/ief"
repository = "https://github.com/etke/ief"
documentation = "https://github.com/etke/ief"
keywords = ["imports", "exports", "elf", "pe", "macho"]
categories = ["command-line-utilities"]
include = [
    "src/*.rs",
    "Cargo.toml",
    "README.md",
]

[profile.release]
codegen-units = 1   # Reduce number of codegen units to increase optimizations
lto = true          # Enable Link Time Optimization
opt-level = 'z'     # Optimize for size
panic = 'abort'     # Abort on panic

[dependencies]
cpp_demangle = "0.2.14"
goblin = "0.2.0"
ignore = "0.4.11"
memmap = "0.7.0"
