[[bin]]
name = "ief"
path = "src/main.rs"

[lib]
name = "ief"
path = "src/lib.rs"
crate-type=["rlib", "cdylib"]

[package]
name = "ief"
version = "0.0.2"
authors = ["etke"]
edition = "2018"
license = "Apache-2.0"
description = "Cross-platform binary import/export search"
homepage = "https://github.com/etke/ief"
repository = "https://github.com/etke/ief"
documentation = "https://github.com/etke/ief"
keywords = ["imports", "exports", "elf", "pe", "macho"]
categories = ["command-line-utilities"]
include = [
    "src/*.rs",
    "Cargo.toml",
    "README.md",
]
readme = "README.md"

[features]
default = []
binja = ["binaryninja", "log"]

[profile.release]
codegen-units = 1   # Reduce number of codegen units to increase optimizations
lto = true          # Enable Link Time Optimization
opt-level = 'z'     # Optimize for size
panic = 'abort'     # Abort on panic

[dependencies]
cpp_demangle = "0.3.5"
goblin = "0.4.3"
ignore = "0.4.11"
memmap = "0.7.0"
binaryninja = { git = "https://github.com/Vector35/binaryninja-api.git", branch = "dev", optional = true }
log = { version = "0.4.14", optional = true }